# twi-booru-notebook

./: booru-stats.ipynb  pyproject.toml
data/: posts.json  tags.json
