[tool.poetry]
name = "booru-stats"
version = "0.1.0"
description = ""
authors = ["Cameron Blankenbuehler <cameron.blankenbuehler@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
plotly = "^5.18.0"
pandas = "^2.1.4"
gql = "^3.5.0"
aiohttp = "^3.9.1"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
